--- a/src/404/404.css
+++ b/src/404/404.css
@@ -18,7 +18,7 @@
 }
 
 .error-text>p {
-    color: #292F36;
+    color: #bad2ec;
     font-family: "DM Serif Display";
     font-size: 4vh;
     width: 70%;
