--- a/src/contact/contact.css
+++ b/src/contact/contact.css
@@ -1,180 +1,159 @@
+/* Updated Contact Page CSS */
 .contact {
     width: 100%;
+    padding: 5% 0;
 }
 
 .contact-header {
     display: flex;
-    height: 120vh;
-    font-family: 'DM Serif Display';
-    background-repeat: no-repeat;
-    background-image: url("../images/backgroung/contact-bg.jpg");
-    margin-bottom: 10%;
-    background-size: cover;
+    height: 100vh;
+    font-family: 'DM Serif Display', serif;
+    background: url("../images/backgroung/contact-bg.jpg") no-repeat center/cover;
+    align-items: flex-end;
+    justify-content: center;
+    padding-bottom: 5%;
 }
 
-.contact-header>h1{
-    width: 20%;
-    padding: 2% 3% 0.5% 3%;
-    background-color: white;
-    border-top-right-radius: 30px;
-    border-top-left-radius: 30px;
-    align-self: flex-end;
+.contact-header h1 {
+    padding: 2% 4%;
+    background-color: #b113d8;
+    border-radius: 30px 30px 0 0;
     text-align: center;
-    margin: 0 auto;
-    color: #292F36;
+    color: #fff;
+    font-size: 2rem;
 }
 
-.contact-header>h1>p {
-    color: #4D5053;
-        font-size: 14px;
-        font-family: Jost;
+.contact-header h1 p {
+    color: #e0e0e0;
+    font-size: 1rem;
+    font-family: 'Jost', sans-serif;
+    margin-top: 5px;
 }
 
 .contact-content {
-    align-items: center;
-    width: 70%;
+    width: 80%;
     text-align: center;
     margin: 0 auto;
 }
 
-.contact-content>h2 {
-    width: 50%;
-    font-size: 30px;
-    padding: 10% 0% 5% 0%;
-    margin: 0 auto;
+.contact-content h2 {
+    font-size: 2.5rem;
+    margin-bottom: 5%;
 }
 
 .contact-form {
     display: flex;
-}
-
-.contact-form>h2 {
-    text-align: center;
-    font-family: DM Serif Display;
-    width: 25%;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .contact-form-info {
     background-color: #F4F0EC;
     border-radius: 30px;
-    padding: 5% 0%;
-    width: 30%;
-    margin: 0 auto;
-}
-
-.contact-form-info>div {
+    padding: 4%;
+    width: 35%;
     text-align: center;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
-.contact-form-info>.icons>p{
+.contact-form-info .icons p {
     display: flex;
     align-items: center;
-    padding-left: 10%;
+    justify-content: start;
     padding-bottom: 5%;
 }
 
 .icon {
-    border: 1px solid white;
+    border: 1px solid #CDA274;
     color: #CDA274;
     background-color: white;
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    vertical-align: middle;
+    width: 40px;
+    height: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 5%;
-}
-
-.contact-smedias {
-    margin-top: 20%;
-}
-
-.contact-smedias>ul {
-    display: flex;
-    padding: 0;
-}
-
-.contact-smedias>ul>li {
-    list-style-type: none;
-    margin-left: 10%;
+    margin-right: 10px;
+    font-size: 1.2rem;
 }
 
 .contact-form-fill {
-    width: 60%;
+    width: 50%;
 }
 
-.contact-form-fill>div {
-    display: flex;
-}
-
-.contact-form-fill>div>input{
-    border-top-style: hidden;
-    border-right-style: hidden;
-    border-left-style: hidden;
-    border-bottom-style: groove;
+.contact-form-fill input,
+.contact-form-fill textarea {
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #292F36;
     outline: none;
-    margin-left: 5%;
-    border-bottom: 1px solid black;
+    padding: 10px;
+    font-size: 1rem;
+    margin-bottom: 15px;
+    background: transparent;
 }
 
-.contact-form-fill>div>textarea{
-    border-top-style: hidden;
-    border-right-style: hidden;
-    border-left-style: hidden;
-    border-bottom-style: groove;
-    outline: none;
-    margin-left: 5%;
+.contact-form-fill textarea {
+    min-height: 120px;
     resize: none;
-    min-height: 100px;
-    width: 100%;
 }
 
-.contact-form-fill>.nameEmail>input,
-.contact-form-fill>.subjectPhone>input {
-    margin-bottom: 10%;
-    width: 100%;
-    height: 30px;
-}
-
-.contact-form-fill>.interested {
-    width: 100%;
-}
-
-.contact-form-fill>.send {
-    width: 100%;
-    margin-top: 8%;
+.contact-form-fill .send {
     display: flex;
     justify-content: flex-end;
 }
 
-.contact-form-fill>.send>button{
-    width: 30%;
-    padding: 3% 0%;
+.contact-form-fill .send button {
+    width: 40%;
+    padding: 12px;
     border-radius: 15px;
     background-color: #292F36;
     color: white;
-    display: flex;
-    justify-content: center;
+    font-size: 1.1rem;
     cursor: pointer;
+    transition: background 0.3s ease-in-out;
+}
+
+.contact-form-fill .send button:hover {
+    background-color: #b113d8;
 }
 
 .map {
     display: flex;
     justify-content: center;
-    margin: 8% 0%;
+    margin: 5% 0;
 }
 
 iframe {
     border-radius: 20px;
+    width: 90%;
+    height: 400px;
+    border: none;
 }
-.status-message.success {
-    color: green;
-    font-weight: bold;
-  }
-  .status-message.error {
-    color: red;
-    font-weight: bold;
-  }
-  
+
+@media (max-width: 1024px) {
+    .contact-form {
+        flex-direction: column;
+        align-items: center;
+    }
+    .contact-form-info, .contact-form-fill {
+        width: 80%;
+    }
+}
+
+@media (max-width: 768px) {
+    .contact-header h1 {
+        font-size: 1.5rem;
+    }
+    .contact-content h2 {
+        font-size: 2rem;
+    }
+    .contact-form-info, .contact-form-fill {
+        width: 90%;
+    }
+    .contact-form-fill .send button {
+        width: 50%;
+    }
+}
