--- a/src/home/home.css
+++ b/src/home/home.css
@@ -3,38 +3,40 @@
     margin: 0;
 }
 .homeNews {
-    width: 90%;
-    height: 130vh;
+    width: 100%;
+    height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding-left: 10%;
-    border-bottom-left-radius: 25%;
     margin-bottom: 5%;
 }
 
 .homeNews>h1 {
-    width: 30%;
-    font-size: 50px;
-    margin: 0;
-    color:rgb(63, 53, 197);
+    width:auto;
+    font-size: 60px;
+    margin-top: inherit;
+    color:white;
+    font-family:Simula, serif;
+    font-weight: 1700;
 }
 
 .homeNews>p {
-    width: 40%;
-    color:rgb(153, 25, 153);
+    width: 60%;
+    color:#55552b;
     font-family: 'Jost';
+    font-size: 21px;
 }
 
 .homeNews>a>button {
-    width: 12%;
-    padding: 1% 2%;
+    width: 57%;
+    padding: 4% 1% 4% 1%;
     border: none;
     border-radius: 10px;
     font-family: 'Jost';
-    background-color: #62a7f7;
+    background-color: #5c5c3d;
     color: white;
     display: flex;
     justify-content: center;
@@ -122,14 +124,18 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin: 0 0 10% 0;
+    margin: 0 0 3% 0;
+    white-space: nowrap;
 }
 
-.callUs>.phoneNum {
+.callUs > .phoneNum {
     display: flex;
     font-family: 'Jost';
     align-items: center;
+    white-space: nowrap;
 }
+
+
 
 .h-icon {
     border: 1px solid white;
@@ -163,9 +169,10 @@
 
 .callUs>a>button {
     width: 100%;
-    padding: 12% 0;
     margin: 5% 0;
     border: none;
+    padding-left: 15px;
+    padding-right: 15px;
     border-radius: 15px;
     display: flex;
     justify-content: center;
